@@ -9,6 +9,7 @@ Pending changes in the mainline
 * New configuration "ScreenshotTemplate" to define the filename of the
   "download as JPEG" function.  New default value is:
   "{PatientID}-{PatientName}-{StudyDate}-{SeriesDescription}-{InstanceNumber}-{CurrentFrame}.jpg"
+* Fix loading of US images with a negative PhyiscalDeltaX value.
 
 
 Version 2.6 (2024-08-31)
